--- a/DependencyStore/appsettings.json
+++ b/DependencyStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication1-1E3F5F5D-8F5A-4F5C-9F0C-5F5F5F5F5F5F;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }  
 }
